# archetype

./: .env.example  .gitignore  EcsComponentSessionStore.py  GraphSystem.py  _temp_nx_inspect.py  catalog.py  docker-compose  headless_test.py  main_test.py  pyproject.toml  ray_system.py  requirements.txt  setup.py  test2.py  test3.py  ugh.ipynb
.cursor/rules/: daft.mdc
archetype/: __init__.py
archetype.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
archetype/archetype/: __init__.py
archetype/archetypes/: archetype.py  openai.py
archetype/core/: __init__.py  base.py  interfaces.py  interfaces.pyi  processor.py  querier.py  query.py  store.py  system.py  update.py  updater.py  world.py
archetype/processors/: __init__.py  llm_udf.py  ray_serve_llm_router.py
archetype/systems/: batch_inference_system.py  nats_transport_system.py  network_system.py  ray_system.py  vllm_inference_system.py
config/: config.yaml  container.py
core/: __init__.py  base.py  container.py  container_interface.py  endpoint.py  interfaces.py  managers.py  processor.py  processors.py  store.py  store2.py  system.py  systems.py  world.py
scripts/: docstrings_precommit.py
src2/: main_test.py
src2/core/: system.py  world.py
tests/: headless_test.py  main_test.py  model_config.yaml  test3.py  test_component.py  test_ray_serve_llmconfig.py  test_toy.py  toy_simulation.py
tests/data/archetype_739de3c63381a1824fed.lance/_transactions/: 0-11525952-4d31-45c9-a34f-1c3873dfd40d.txn  1-b7e4b5e5-2b65-4318-8aad-1cb7795e9514.txn  10-c3b04404-5fac-43fb-8b64-8b3adb96c9c9.txn  (+57 more)
(+119 files in other folders)
