[project]
name = "archetype"
version = "0.1.0"
description = "Lazy Distributed Dataframe-Based ECS Simulation Engine using Daft for processing and LanceDB for storage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "getdaft>=0.4.13",
    "pyarrow>=16.0.0",
    "lancedb>=0.22.0",
    "python-ulid>=3.0.0",
    "pytest>=8.3.5",
]
